--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 
-<script src="../js/script26.js"></script>
+<!--<script src="../js/script26.js"></script>-->
+<!--<script src="../js/script27.js"></script>-->
+<!--<script src="../js/script28.js"></script>-->
+<script src="../js/script29.js"></script>
+<!--<script src="../js/script34.js"></script>-->
 </body>
 </html>
